Use different heap settings for Travis CI
This configures Gradle to use a different set of heap settings. These
settings have reduced build times on two similarly structured projects
to ~25% of their original times.